--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -48,7 +48,18 @@
     "# Use vm_size = \"Standard_D2_V2\" in your provisioning configuration.\n",
     "# max_nodes should be no greater than 4.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "cluster_name = \"azure-project\"\n",
+    "\n",
+    "# Verify that cluster does not exist already\n",
+    "try:\n",
+    "    compute_cluster = ComputeTarget(workspace=ws, name=cluster_name)\n",
+    "    print('Found existing cluster, use it.')\n",
+    "except ComputeTargetException:\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2', max_nodes=4)\n",
+    "    compute_cluster = ComputeTarget.create(ws, cluster_name, compute_config)\n",
+    "\n",
+    "compute_cluster.wait_for_completion(show_output=True)"
    ]
   },
   {
@@ -80,19 +91,28 @@
     "import os\n",
     "\n",
     "# Specify parameter sampler\n",
-    "ps = ### YOUR CODE HERE ###\n",
+    "ps = RandomParameterSampling({\n",
+    "    '--C': choice(0.001, 0.01, 0.1, 1, 10, 100),\n",
+    "    '--max_iter': choice(range(25, 500, 25))\n",
+    "})\n",
     "\n",
     "# Specify a Policy\n",
-    "policy = ### YOUR CODE HERE ###\n",
+    "policy =  BanditPolicy(slack_factor = 0.1, evaluation_interval = 2)\n",
     "\n",
     "if \"training\" not in os.listdir():\n",
     "    os.mkdir(\"./training\")\n",
     "\n",
     "# Create a SKLearn estimator for use with train.py\n",
-    "est = ### YOUR CODE HERE ###\n",
+    "est = SKLearn(source_directory = './', entry_script = 'train.py', compute_target = compute_cluster)\n",
     "\n",
     "# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\n",
-    "hyperdrive_config = ### YOUR CODE HERE ###"
+    "hyperdrive_config = HyperDriveConfig(estimator=est,\n",
+    "                                     hyperparameter_sampling=ps,\n",
+    "                                     policy=policy,\n",
+    "                                     primary_metric_name='Accuracy',\n",
+    "                                     primary_metric_goal=PrimaryMetricGoal.MAXIMIZE,\n",
+    "                                     max_total_runs=25,\n",
+    "                                     max_concurrent_runs=4)"
    ]
   },
   {
@@ -103,7 +123,10 @@
    "source": [
     "# Submit your hyperdrive run to the experiment and show run details with the widget.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "\n",
+    "hyperdrive_run = exp.submit(hyperdrive_config)\n",
+    "RunDetails(hyperdrive_run).show()"
    ]
   },
   {
@@ -128,7 +151,22 @@
     "import joblib\n",
     "# Get your best run and save the model from that run.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "best_hyperdrive_run = run.get_best_run_by_primary_metric()\n",
+    "best_run_hyperparameters = best_hyperdrive_run.get_details()['runDefinition']['arguments']\n",
+    "joblib.dump(value=best_run_hyperparameters, filename='./outputs/best_hyperdrive_model.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print the best run id, hyperparameters values, and accuracy achieved\n",
+    "print(\"Best run ID: {}\".format(best_hyperdrive_run.ID))\n",
+    "print(\"Best Hyperparamters: {}\".format(best_hyperdrive_parameters))\n",
+    "print(\"Accuracy: {}\".format(best_hyperdrive_run.get_metrics()[\"accuracy\"]))"
    ]
   },
   {
@@ -143,7 +181,9 @@
     "# Data is available at: \n",
     "# \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "path = \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
+    "data = TabularDatasetFactory.from_delimited_files(path=path)"
    ]
   },
   {
@@ -168,7 +208,8 @@
     "from train import clean_data\n",
     "\n",
     "# Use the clean_data function to clean your data.\n",
-    "x, y = clean_data(### YOUR DATA OBJECT HERE ###)"
+    "x, y = clean_data(data)\n",
+    "training_data = x.join(y)"
    ]
   },
   {
@@ -198,11 +239,11 @@
     "# Azure tenant, which will incur personal costs.\n",
     "automl_config = AutoMLConfig(\n",
     "    experiment_timeout_minutes=30,\n",
-    "    task=,\n",
-    "    primary_metric=,\n",
-    "    training_data=,\n",
-    "    label_column_name=,\n",
-    "    n_cross_validations=)"
+    "    task='Classification',\n",
+    "    primary_metric='accuracy',\n",
+    "    training_data=training_data,\n",
+    "    label_column_name='y',\n",
+    "    n_cross_validations=5)\n"
    ]
   },
   {
@@ -223,7 +264,8 @@
    "source": [
     "# Submit your automl run\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "automl_run = exp.submit(config=automl_config, show_output=True)"
    ]
   },
   {
@@ -234,7 +276,29 @@
    "source": [
     "# Retrieve and save your best automl model.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "### YOUR CODE HERE ###\n",
+    "best_automl_run, best_autonml_model = automl_run.get_output()\n",
+    "joblib.dump(value=best_automl_model, filename='./outputs/best_automl_model.joblib')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print the best automl model\n",
+    "best_automl_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#delete the compute cluster\n",
+    "compute_cluster.delete()"
    ]
   }
  ],
